Giraph Change Log

Release 0.2.0 - unreleased

  GIRAPH-244: Vertex API redesign (apresta via aching).

  GIRAPH-236: Add FindBugs to maven build (Jan van der Lugt via
  aching).

  GIRAPH-224: Netty server-side combiner (apresta via aching).

  GIRAPH-251: Allow to access the distributed cache from Vertexes and
  WorkerContext (Gianmarco De Francisci Morales via aching).

  GIRAPH-261: Rename isQuiet variable. (Gianmarco De Francisci Morales 
  via jghoman).

  GIRAPH-248: Generic IdentityVertex for IO testing (Sean Choi via
  aching).

  GIRAPH-222: GIRAPH-222 giraph-formats-contrib needs a README (bfem
  via aching).

  GIRAPH-257: TestBspBasic.testBspMasterCompute is broken (majakabiljo
  via aching).

  GIRAPH-81: Create annotations on provided algorithms for cli
  (majakabiljo via aching).

  GIRAPH-242: HashMapVertex stores neighbor ids twice.
  (Alessandro Presta via hyunsik)

  GIRAPH-241: Small typos in var names in NettyWorkerClient.java 
  (Eli Reisman via hyunsik)

  GIRAPH-239: IntIntNullIntVertex doesn't save halted state (apresta
  via aching)

  GIRAPH-238: BasicVertex should have default Writable implementation
  (apresta via aching)

  GIRAPH-233: Small errors found by FindBugs (Jan van der Lugt via hyunsik)
  
  GIRAPH-216: NullWritable as VertexData, EdgeData or MessageData
  should be allowed.  (Jan van der Lugt via jghoman)

  GIRAPH-221: Make iteration over edges more explicit (apresta via aching).

  GIRAPH-225: Guava version in POM.XML is really old. Updated to version 12.0.
  (Eli Reisman via hyunsik)

  GIRAPH-223: Need to put Giraph jar on classpath, post-GIRAPH-205.
  (Eli Reisman via jghoman)

  GIRAPH-213: NettyClient.stop() could deadlock according to netty.io docs.
  (Eli Reisman via jghoman)

  GIRAPH-127: Extending the API with a master.compute() function.
  (Jan van der Lugt via jghoman)

  GIRAPH-220: Default implementation of BasicVertex#sendMsgToAllEdges().
  (Alessandro Presta via jghoman)
