@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.2.0 - unreleased
 
+  GIRAPH-266: Average aggregators don't calculate real average
+  (majakabiljo via aching).
+
   GIRAPH-244: Vertex API redesign (apresta via aching).
 
   GIRAPH-236: Add FindBugs to maven build (Jan van der Lugt via
